--- a/css/responsive.css
+++ b/css/responsive.css
@@ -104,7 +104,7 @@
         width: 100%;
         height: 185px;
         position: absolute;
-        top: 1780px;
+        top: 1900px;
     }
     .h1-06{
         width: 140px;
@@ -334,7 +334,7 @@
     }
     .calendar{
         position: absolute;
-        top: 2200px;
+        top: 2310px;
         max-width: 252px;
         width: 100%;
         height: 233px;
@@ -662,7 +662,7 @@
         font-size: 14px;
     }
     .calendar{
-        top: 2150px;
+        top: 2270px;
     }
 }
 @media(max-width:800px){
@@ -774,7 +774,7 @@
         background-color: #111111;
         border-radius: 10px;
         position: absolute;
-        top: 1830px;
+        top: 1970px;
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
@@ -999,6 +999,9 @@
         max-width:460px;
         width: 100%;
     }
+    .calendar{
+        top: 1930px;
+    }
 }
 @media(max-width:620px){
     .container2>h1{
@@ -1131,7 +1134,7 @@
     }
     .calendar{
         position: absolute;
-        top: 1550px;
+        top: 1700px;
         max-width: 140px;
         width: 100%;
         height: 120px;
@@ -1284,7 +1287,7 @@
         width: 100%;
     }
     .calendar{
-        top: 1530px;
+        top: 1650px;
     }
 }
 @media(max-width:480px){
@@ -1389,7 +1392,7 @@
     }
     .calendar{
         position: absolute;
-        top: 1450px;
+        top: 1580px;
         max-width: 100px;
         width: 100%;
         height: 90px;
@@ -1674,7 +1677,7 @@
         font-size:13px;
     }
     .calendar{
-        top: 1420px;
+        top: 1550px;
     }
 }
 @media(max-width:375px){
@@ -1792,7 +1795,7 @@
     }
     .calendar{
         position: absolute;
-        top: 1250px;
+        top: 1380px;
         max-width: 80px;
         width: 100%;
         height: 70px;
