add footer responsive

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -236,6 +236,128 @@
         font-size: 18px;
         font-family: 'Poppins'; 
     }
+    .container3{
+        max-width: 1450px;
+        width: 100%;
+    }
+    .contact{
+        max-width: 525px;
+        padding-top: 125px;
+    }
+    .contact>h2{
+        font-size: 30px;
+    }
+    .contact>p{
+        font-size: 14px;
+    }
+    .number1>h2{
+        font-size: 14px;
+    }
+    .number1>p{
+        font-size: 20px;
+    }
+    .find{
+        font-size: 20px;
+        margin-top: 80px;
+    }
+    .icons-wraper{
+        width: 700px;
+        height: 83px;
+        margin-left: -230pt;
+        margin-top: 105px;
+    }
+    .wraper{
+        margin-left: 230pt;
+    }
+    .social{
+        margin-right: 33px;
+    }
+    .submit-wraper{
+        margin: 121px 0 0 64px;
+    }
+    .drop{
+        color: white;
+        font-size: 40px;
+        font-family: 'Poppins';
+        margin-bottom: 49px;
+    }
+    .input{
+        width: 300px;
+        height: 89px;
+        color: #707070;
+        font-size:25px ;
+        background-color: black;
+        border: 1px solid #333333;
+        border-radius: 5px;
+        outline: none;
+        margin-right: 30px;
+    }
+    .input::placeholder{
+        padding-left: 25px;
+        font-size: 18px;
+        color: #707070;
+        font-family: 'Montserrat';
+    }
+    .input-wraper{
+        display: flex;
+    }
+    .input2{
+        width: 300px;
+        height: 89px;
+        color: #707070;
+        font-size:25px ;
+        background-color: black;
+        border: 1px solid #333333;
+        border-radius: 5px;
+        outline: none;
+    }
+    .input2::placeholder{
+        padding-left: 25px;
+        font-size: 18px;
+        color: #707070;
+        font-family: 'Montserrat';
+    }
+    .input-wraper2{
+        display: flex;
+        margin-top: 50px;
+    }
+    .textarea{
+        width: 630px;
+        height: 205px;
+        font-size: 25px;
+        color:#707070 ;
+        background-color: #000000;
+        border: 1px solid #333333;
+        border-radius: 5px;
+        outline: none;
+        margin-top: 50px;
+    }
+    .textarea::placeholder{
+        font-size: 18px;
+        color: #707070;
+        font-family: 'Montserrat';
+        padding-left: 25px;
+    }
+    .button{
+        width: 241px;
+        height: 83px;
+        background-color: #FF4900;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: none;
+        margin-top: 53px;
+        color: white;
+        font-size: 22px;
+        font-family: 'Poppins';
+    }
+    .footer-h1{
+        color: white;
+        font-size: 18px;
+        font-family: 'Poppins';
+        margin-top: 80px;
+    }
 }
 @media(max-width:1280px) {
     .section1-wraper{
@@ -517,6 +639,179 @@
     }
     .box-wraper{
         height:800px
+    }
+    .contact-wraper{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer{
+        width: 100%;
+        height: 1800px;
+        background-color: #060606;
+        margin-top: 161px;
+    }
+    .container3{
+        max-width: 1450px;
+        width: 100%;
+    }
+    .contact-wraper{
+        display: flex;
+        max-width: 525px;
+        width: 100%;
+    }
+    .contact{
+        max-width: 525px;
+        padding-top: 125px;
+    }
+    .contact>h2{
+        color: white;
+        font-size: 40px;
+        font-family: 'Poppins';
+        margin-bottom: 20px;
+    }
+    .contact>p{
+        color: white;
+        font-size: 18px;
+        font-family: 'Poppins';
+        margin-bottom: 10px;
+    }
+    .call{
+        display: flex;
+        margin-top: 57px;
+    }
+    .icon1{
+        width: 49px;
+        height: 49px;
+        background-color: #000000;
+        border: 1px solid #333333;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .number1{
+        margin-left: 25px;
+    }
+    .number1>h2{
+        color:#6B6B6B;
+        font-size: 18px;
+        font-family: 'Poppins';
+        margin-bottom: 5px;
+    }
+    .number1>p{
+        color:white;
+        font-size: 25px;
+        font-family: 'Poppins';
+    }
+    .find{
+        color: white;
+        font-size: 25px;
+        font-family: 'Poppins';
+        margin-top: 60px;
+    }
+    .icons-wraper{
+        width: 850px;
+        height: 83px;
+        background-color: #FF4900;
+        border-radius: 10px;
+        margin-top: 88.5px;
+        margin-left: -270pt;
+        display: flex;
+        align-items: center;
+    }
+    .wraper{
+        margin-left: 270pt;
+        display: flex;
+    }
+    .social{
+        margin-right: 33px;
+    }
+    .submit-wraper{
+        margin-top: 150px;
+        margin-left: 0;
+    }
+    .drop{
+        color: white;
+        font-size: 40px;
+        font-family: 'Poppins';
+        margin-bottom: 49px;
+    }
+    .input{
+        width: 250px;
+        height: 89px;
+        color: #707070;
+        font-size:25px ;
+        background-color: black;
+        border: 1px solid #333333;
+        border-radius: 5px;
+        outline: none;
+        margin-right: 25px;
+    }
+    .input::placeholder{
+        padding-left: 25px;
+        font-size: 18px;
+        color: #707070;
+        font-family: 'Montserrat';
+    }
+    .input-wraper{
+        display: flex;
+    }
+    .input2{
+        width: 250px;
+        height: 89px;
+        color: #707070;
+        font-size:25px ;
+        background-color: black;
+        border: 1px solid #333333;
+        border-radius: 5px;
+        outline: none;
+    }
+    .input2::placeholder{
+        padding-left: 25px;
+        font-size: 18px;
+        color: #707070;
+        font-family: 'Montserrat';
+    }
+    .input-wraper2{
+        display: flex;
+        margin-top: 50px;
+    }
+    .textarea{
+        width: 525px;
+        height: 205px;
+        font-size: 25px;
+        color:#707070 ;
+        background-color: #000000;
+        border: 1px solid #333333;
+        border-radius: 5px;
+        outline: none;
+        margin-top: 50px;
+    }
+    .textarea::placeholder{
+        font-size: 18px;
+        color: #707070;
+        font-family: 'Montserrat';
+        padding-left: 25px;
+    }
+    .button{
+        width: 180px;
+        height: 50px;
+        background-color: #FF4900;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: none;
+        margin-top: 53px;
+        color: white;
+        font-size: 22px;
+        font-family: 'Poppins';
+    }
+    .footer-h1{
+        color: white;
+        font-size: 18px;
+        font-family: 'Poppins';
+        margin-top: 75px;
     }
 }
 @media(max-width:1024px){
@@ -990,6 +1285,154 @@
         position: absolute;
         margin-top: 50px;
         margin-left: 150px;
+    }
+    .footer{
+        width: 100%;
+        height: 2000px;
+        background-color: #060606;
+        margin-top: 161px;
+    }
+    .container3{
+        max-width: 1450px;
+        width: 100%;
+    }
+    .contact-wraper{
+        display: flex;
+        max-width: 350px;
+        width: 100%;
+    }
+    .contact{
+        max-width: 350px;
+        padding-top: 125px;
+    }
+    .contact>h2{
+        color: white;
+        font-size: 25px;
+        font-family: 'Poppins';
+        margin-bottom: 20px;
+    }
+    .contact>p{
+        color: white;
+        font-size: 12px;
+        font-family: 'Poppins';
+        margin-bottom: 10px;
+    }
+    .call{
+        display: flex;
+        margin-top: 57px;
+    }
+    .icon1{
+        width: 49px;
+        height: 49px;
+        background-color: #000000;
+        border: 1px solid #333333;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .number1{
+        margin-left: 25px;
+    }
+    .number1>h2{
+        color:#6B6B6B;
+        font-size: 14px;
+        font-family: 'Poppins';
+        margin-bottom: 5px;
+    }
+    .number1>p{
+        color:white;
+        font-size: 20px;
+        font-family: 'Poppins';
+    }
+    .find{
+        color: white;
+        font-size: 24px;
+        font-family: 'Poppins';
+        margin-top: 60px;
+    }
+    .icons-wraper{
+        width: 550px;
+        height: 83px;
+        background-color: #FF4900;
+        border-radius: 10px;
+        margin-top: 88.5px;
+        margin-left: -150pt;
+        display: flex;
+        align-items: center;
+    }
+    .wraper{
+        margin-left: 150pt;
+        display: flex;
+    }
+    .social{
+        margin-right: 33px;
+        width:30px;
+        height: 30px;
+    }
+    .pint{
+        width: 30px;
+        height: 30px;
+    }
+    .submit-wraper{
+        margin-top: 150px;
+        margin-left: 0;
+    }
+    .drop{
+        color: white;
+        font-size: 40px;
+        font-family: 'Poppins';
+        margin-bottom: 49px;
+    }
+    .input{
+        width:300px;
+        height: 89px;
+        font-size:25px ;
+        border-radius: 5px;
+        outline: none;
+        margin: auto 0 30px;
+    }
+    .input::placeholder{
+        padding-left: 25px;
+        font-size: 18px;
+    }
+    .input-wraper{
+        display: flex;
+        flex-direction: column;
+    }
+    .input-wraper2{
+        display: flex;
+        flex-direction: column;
+        margin-top: 30px;
+    }
+    .input2{
+        width: 300px;
+        height: 89px;
+        font-size:25px ;
+    }
+    .input2::placeholder{
+        padding-left: 25px;
+        font-size: 18px;
+    }
+    .textarea{
+        width: 300px;
+        height: 205px;
+        font-size: 25px;
+        margin-top: 50px;
+    }
+    .textarea::placeholder{
+        font-size: 18px;
+        padding-left: 25px;
+    }
+    .button{
+        width: 140px;
+        height: 40px;
+        border-radius: 10px;
+        margin-top: 53px;
+        font-size: 15px;
+    }
+    .footer-h1{
+        font-size: 14px;
     }
 }
 @media(max-width:672px){
@@ -1679,6 +2122,155 @@
     .calendar{
         top: 1550px;
     }
+    .footer{
+        width: 100%;
+        height: 1720px;
+        background-color: #060606;
+        margin-top: 161px;
+    }
+    .container3{
+        max-width: 1450px;
+        width: 100%;
+    }
+    .contact-wraper{
+        display: flex;
+        max-width: 300px;
+        width: 100%;
+    }
+    .contact{
+        max-width: 300px;
+        padding-top: 125px;
+    }
+    .contact>h2{
+        color: white;
+        font-size: 20px;
+        font-family: 'Poppins';
+        margin-bottom: 20px;
+    }
+    .contact>p{
+        color: white;
+        font-size: 10px;
+        font-family: 'Poppins';
+        margin-bottom: 10px;
+    }
+    .call{
+        display: flex;
+        margin-top: 57px;
+    }
+    .icon1{
+        width: 49px;
+        height: 49px;
+        background-color: #000000;
+        border: 1px solid #333333;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .number1{
+        margin-left: 25px;
+    }
+    .number1>h2{
+        color:#6B6B6B;
+        font-size: 12px;
+        font-family: 'Poppins';
+        margin-bottom: 5px;
+    }
+    .number1>p{
+        color:white;
+        font-size: 16px;
+        font-family: 'Poppins';
+    }
+    .find{
+        color: white;
+        font-size: 20px;
+        font-family: 'Poppins';
+        margin-top: 60px;
+    }
+    .icons-wraper{
+        width: 350px;
+        height: 60px;
+        background-color: #FF4900;
+        border-radius: 10px;
+        margin-top: 88.5px;
+        margin-left: -50pt;
+        display: flex;
+        align-items: center;
+    }
+    .wraper{
+        margin-left: 50pt;
+        display: flex;
+    }
+    .social{
+        margin-right: 33px;
+        width:20px;
+        height: 20px;
+    }
+    .pint{
+        width: 20px;
+        height: 20px;
+    }
+    .submit-wraper{
+        margin-top: 150px;
+        margin-left: 0;
+        width: 250px;
+    }
+    .drop{
+        color: white;
+        font-size: 25px;
+        font-family: 'Poppins';
+        margin-bottom: 49px;
+    }
+    .input{
+        width:250px;
+        height: 60px;
+        font-size:25px ;
+        border-radius: 5px;
+        outline: none;
+        margin: auto 0 30px;
+    }
+    .input::placeholder{
+        padding-left: 20px;
+        font-size: 14px;
+    }
+    .input-wraper{
+        display: flex;
+        flex-direction: column;
+    }
+    .input-wraper2{
+        display: flex;
+        flex-direction: column;
+        margin-top: 30px;
+    }
+    .input2{
+        width: 250px;
+        height: 60px;
+        font-size:20px ;
+    }
+    .input2::placeholder{
+        padding-left: 20px;
+        font-size: 14px;
+    }
+    .textarea{
+        width: 250px;
+        height: 150px;
+        font-size: 20px;
+        margin-top: 50px;
+    }
+    .textarea::placeholder{
+        font-size: 14px;
+        padding-left: 25px;
+    }
+    .button{
+        width: 100px;
+        height: 40px;
+        border-radius: 10px;
+        margin-top: 53px;
+        font-size: 13px;
+    }
+    .footer-h1{
+        font-size: 12px;
+    }
 }
 @media(max-width:375px){
     .logo{
@@ -1847,6 +2439,155 @@
         position: absolute;
         margin-top: 50px;
         margin-left: 105px;
+    }
+    .footer{
+        width: 100%;
+        height: 1720px;
+        background-color: #060606;
+        margin-top: 161px;
+    }
+    .container3{
+        max-width: 1450px;
+        width: 100%;
+    }
+    .contact-wraper{
+        display: flex;
+        max-width: 250px;
+        width: 100%;
+    }
+    .contact{
+        max-width: 250px;
+        padding-top: 125px;
+    }
+    .contact>h2{
+        color: white;
+        font-size: 16px;
+        font-family: 'Poppins';
+        margin-bottom: 20px;
+    }
+    .contact>p{
+        color: white;
+        font-size: 8px;
+        font-family: 'Poppins';
+        margin-bottom: 10px;
+    }
+    .call{
+        display: flex;
+        margin-top: 57px;
+    }
+    .icon1{
+        width: 49px;
+        height: 49px;
+        background-color: #000000;
+        border: 1px solid #333333;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .number1{
+        margin-left: 25px;
+    }
+    .number1>h2{
+        color:#6B6B6B;
+        font-size: 10px;
+        font-family: 'Poppins';
+        margin-bottom: 5px;
+    }
+    .number1>p{
+        color:white;
+        font-size: 14px;
+        font-family: 'Poppins';
+    }
+    .find{
+        color: white;
+        font-size: 16px;
+        font-family: 'Poppins';
+        margin-top: 60px;
+    }
+    .icons-wraper{
+        width: 300px;
+        height: 60px;
+        background-color: #FF4900;
+        border-radius: 10px;
+        margin-top: 88.5px;
+        margin-left: -50pt;
+        display: flex;
+        align-items: center;
+    }
+    .wraper{
+        margin-left: 50pt;
+        display: flex;
+    }
+    .social{
+        margin-right: 33px;
+        width:15px;
+        height: 15px;
+    }
+    .pint{
+        width: 15px;
+        height: 15px;
+    }
+    .submit-wraper{
+        margin-top: 150px;
+        margin-left: 0;
+        width: 250px;
+    }
+    .drop{
+        color: white;
+        font-size: 20px;
+        font-family: 'Poppins';
+        margin-bottom: 49px;
+    }
+    .input{
+        width:200px;
+        height: 60px;
+        font-size:25px ;
+        border-radius: 5px;
+        outline: none;
+        margin: auto 0 30px;
+    }
+    .input::placeholder{
+        padding-left: 20px;
+        font-size: 12px;
+    }
+    .input-wraper{
+        display: flex;
+        flex-direction: column;
+    }
+    .input-wraper2{
+        display: flex;
+        flex-direction: column;
+        margin-top: 30px;
+    }
+    .input2{
+        width: 200px;
+        height: 60px;
+        font-size:16px ;
+    }
+    .input2::placeholder{
+        padding-left: 20px;
+        font-size: 12px;
+    }
+    .textarea{
+        width: 200px;
+        height: 150px;
+        font-size: 16px;
+        margin-top: 50px;
+    }
+    .textarea::placeholder{
+        font-size: 12px;
+        padding-left: 25px;
+    }
+    .button{
+        width: 80px;
+        height: 40px;
+        border-radius: 10px;
+        margin-top: 53px;
+        font-size: 11px;
+    }
+    .footer-h1{
+        font-size: 10px;
     }
 }
 @media(max-width:320px){
