--- a/css/responsive.css
+++ b/css/responsive.css
@@ -406,9 +406,9 @@
     }
     .nav-li-wraper{
         margin-right: 30px;
-        width: 90px;
+        width: 119px;
         height: 119px;
-        background-color: #FF4900;
+        background-color: none;
         display: flex;
         justify-content: center;
     }
@@ -456,7 +456,7 @@
     }
     .calendar{
         position: absolute;
-        top: 2310px;
+        top: 2600px;
         max-width: 252px;
         width: 100%;
         height: 233px;
@@ -813,30 +813,95 @@
         font-family: 'Poppins';
         margin-top: 75px;
     }
+    .wrapper, 
+  ul{
+    display: block;
+    text-align: center;
+  }
+  .header-wraper{
+      height: 400px;
+  }
+  .nav-li-wraper{
+      display: none;
+  }
+  .logo{
+      margin-left: 40px;
+  }
+  .nav-a{
+    display: block;
+    margin: 0;
+    margin-bottom: 30px;
+  } 
+  .nav1{
+      text-align: start;
+      width: 90px;
+      margin: 0;
+      margin-bottom: 30px;
+  }
+  .nav2{
+    text-align: start;
+    width: 80px;
+    margin: 0;
+    margin-bottom: 30px;
 }
-@media(max-width:1024px){
-    .navigation{
-        display: none;
+.nav3{
+    text-align: start;
+    width: 80px;
+    margin: 0;
+    margin-bottom: 30px;
+}
+  .ul-wraper{
+      margin-top:100px;
+      margin-left: -100px;
+}
+  .social-icons{
+    display: flex;
+    justify-content: center; 
+  } 
+  .burger-icon{
+    color: #fff;
+    display: block;
+    font-size: 30px;
+    position: absolute;
+    top: 40px;
+    right: 30px;
+    cursor:pointer;
+  }
+  .menu-ul>li{
+      margin: 0;
+  }
+  .fa-bars{
+      display: block;
+      margin: 20px 50px;
+  }
+  .menu-ul,
+  .social-icons{
+    display: none;
+  }  
+  .ul-wraper{
+      display: flex;
+      justify-content: center;
+      width: 100%;
+  }
+  .menu-ul.open-menu{
+    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media(max-width:1024px){ 
+  .social-icons.open-socicon{
+    display: flex;
+  } 
+  .slider .slider_item img {
+    margin-left: 405px;
     }
-    .fa-bars{
-        display: block;
-        margin: 45px;
+  .slick-h1{
+    font-size: 30px;
     }
-    .header{
-        display: flex;
-        justify-content: space-between;
-    }
-    .logo{
-        margin-left: 40px;
-    }
-    .slider .slider_item img {
-        margin-left: 405px;
-    }
-    .slick-h1{
-        font-size: 30px;
-    }
-    .slick-p{
-        font-size: 14px;
+  .slick-p{
+    font-size: 14px;
     }
 }
 @media(max-width:900px){
@@ -957,7 +1022,7 @@
         font-size: 14px;
     }
     .calendar{
-        top: 2270px;
+        top: 2550px;
     }
 }
 @media(max-width:800px){
@@ -1069,7 +1134,7 @@
         background-color: #111111;
         border-radius: 10px;
         position: absolute;
-        top: 1970px;
+        top: 2240px;
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
@@ -1243,6 +1308,24 @@
     }
     .slick-dots li button:before{
         top: 0;
+    }
+    .menu-ul>li{
+        margin: 0;
+    }
+    .nav-a{
+        font-size: 14px;
+    } 
+    .nav1{
+        font-size: 14px;
+        width: 70px;
+    }
+    .nav2{
+        font-size: 14px;
+        width: 70px;
+    }
+    .nav3{
+        font-size: 14px;
+        width: 70px;
     }
 }
 @media(max-width:767px){
@@ -1436,6 +1519,33 @@
     }
 }
 @media(max-width:672px){
+    .menu-ul>li{
+        margin: 0;
+    }
+    .nav-a{
+        font-size: 14px;
+    } 
+    .nav1{
+        font-size: 14px;
+        width: 70px;
+    }
+    .nav2{
+        font-size: 14px;
+        width: 70px;
+    }
+    .nav3{
+        font-size: 14px;
+        width: 70px;
+    }
+    .logo{
+        margin-left: 20px;
+    }
+    .fa-bars{
+        margin: 10px 0 0 0;
+    }
+    .image{
+        width: 150px;
+    }
 }
 @media(max-width:626px){
     .section2-img{
@@ -1443,7 +1553,7 @@
         width: 100%;
     }
     .calendar{
-        top: 1930px;
+        top: 2200px;
     }
 }
 @media(max-width:620px){
@@ -1577,7 +1687,7 @@
     }
     .calendar{
         position: absolute;
-        top: 1700px;
+        top: 1980px;
         max-width: 140px;
         width: 100%;
         height: 120px;
@@ -1730,7 +1840,7 @@
         width: 100%;
     }
     .calendar{
-        top: 1650px;
+        top: 1930px;
     }
 }
 @media(max-width:480px){
@@ -1835,7 +1945,7 @@
     }
     .calendar{
         position: absolute;
-        top: 1580px;
+        top: 1850px;
         max-width: 100px;
         width: 100%;
         height: 90px;
@@ -2022,6 +2132,34 @@
     .slick-p{
         font-size: 4px;
     }
+    .menu-ul>li{
+        margin: 0;
+    }
+    .nav-a{
+        font-size: 12px;
+    } 
+    .nav1{
+        font-size: 12px;
+        width: 70px;
+    }
+    .nav2{
+        font-size: 12px;
+        width: 70px;
+    }
+    .nav3{
+        font-size: 12px;
+        width: 70px;
+    }
+    .logo{
+        margin-left: 20px;
+    }
+    .fa-bars{
+        margin: 10px 0 0 0;
+        font-size: 30px;
+    }
+    .image{
+        width: 120px;
+    }
 }
 @media(max-width:414px){
     .man-effect{
@@ -2041,7 +2179,7 @@
     }
     .calendar{
         position: absolute;
-        top: 1560px;
+        top: 2000px;
     }
     .skills{
         max-width: 300px;
@@ -2120,7 +2258,7 @@
         font-size:13px;
     }
     .calendar{
-        top: 1550px;
+        top: 1820px;
     }
     .footer{
         width: 100%;
@@ -2387,7 +2525,7 @@
     }
     .calendar{
         position: absolute;
-        top: 1380px;
+        top: 1600px;
         max-width: 80px;
         width: 100%;
         height: 70px;
@@ -2588,6 +2726,40 @@
     }
     .footer-h1{
         font-size: 10px;
+    }
+    .menu-ul>li{
+        margin: 0;
+    }
+    .nav-a{
+        font-size: 12px;
+    } 
+    .nav1{
+        font-size: 12px;
+        width: 70px;
+    }
+    .nav2{
+        font-size: 12px;
+        width: 70px;
+    }
+    .nav3{
+        font-size: 12px;
+        width: 70px;
+    }
+    .logo{
+        margin-left: 20px;
+    }
+    .fa-bars{
+        margin: 10px 0 0 0;
+        font-size: 25px;
+    }
+    .image{
+        width: 100px;
+    }
+    .header-wraper{
+        height: 350px;
+    }
+    .ul-wraper{
+        margin-top: 100px;
     }
 }
 @media(max-width:320px){
