--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,54 @@
+
 .body{
     background-color: black;
 }
-.header{
-    background-color: #000000;
+.header-wraper{
+    background: #000000;
     width: 100%;
+    height: 119px;
+    position: relative;
     display: flex;
     justify-content: space-around;
 }
 .logo{
-    margin-top: 30px;
+    color: #fff;
+    margin-top: 35px;
 }
-.nav-ul{
+ul{
     display: flex;
-    
 }
-.nav-li{
-    color: white;
+.nav-a{
     margin-right: 52px;
-    margin-top: 70px;
-    font-family: 'Poppins';
-}
-.aa{
     color: white;
+    font-size: 18px;
     font-family: 'Poppins';
 }
 .nav-li-wraper{
-    margin-right: 30px;
-    width: 119px;
-    height: 119px;
-    background-color: #FF4900;
-    display: flex;
-    justify-content: center;
-}
-.nav-li-wraper>li{
-    margin-top: 70px;
-    color: white;
-    font-family: 'Poppins';
-}
-.nav-li-wraper2{
     width: 148px;
     height: 67px;
     background-color:#FF4900 ;
     border-radius: 10px;
+    margin-top: 8px;
+    margin-left: 40px;
+    transform: translate(-50%,-50%);
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 44px;
 }
-.nav-li-wraper2>li{
-    color: white;
-    font-family: 'Poppins';
+.a1{
+    width: 20px;
+    margin-right: 0;
 }
+.ab{
+    margin-right: 70px;
+}
+.menu-ul{
+    margin-top: 70px;
+}
+.burger-icon {
+    display: none;
+}
+
 .section1-wraper{
     display: flex;
     width: 100%;
